# 3D-Renderer

./: CMakeLists.txt  main.cpp
include/: renderedObj.hpp  triangle.hpp  vec3.hpp
src/: renderedObj.cpp  triangle.cpp  vec3.cpp
